...
    case general
    case menuBar
    case notifications

    var title: String {
        switch self {
        case .general: "General"
        case .menuBar: "Menu Bar"
        case .notifications: "Notifications"
        }
    }

    var symbol: String {
        switch self {
        case .general: "gear"
...
